# cpp-playground

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/cppScratch/: test.hpp
include/cppScratch/dal/: dal.hpp
libs/dal/: CMakeLists.txt
libs/dal/include/dal/: secret.hpp
libs/dal/src/: lib.cpp  secret.cpp
src/: CMakeLists.txt  main.cpp
